[package]
name = "pdf_replacer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.31.0"
structopt = "0.3.26"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
adobe-cmap-parser = "0.3.3"